# chaosnexus-codex

./: .gitignore  Cargo.toml  Justfile  README.md  chaosdocs.toml  chaosnexus-codex.toml
src/: config.rs  fetch.rs  main.rs
